--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,6 @@ add_library(i2c_driver src/i2c_driver.cpp)
 add_library(pb6s40a_control src/pb6s40a_control.cpp)
 
 ## Declare a C++ executable
-add_executable(test_node src/test_node.cpp)
+add_executable(example_program src/example_program.cpp)
 
-target_link_libraries(test_node i2c_driver pb6s40a_control)
+target_link_libraries(example_program i2c_driver pb6s40a_control)
